feat: 채팅 조회, 타이핑 추가 및 리팩터링